--- a/SIPENGUBER.csproj
+++ b/SIPENGUBER.csproj
@@ -1,9 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <PublishSingleFile>true</PublishSingleFile>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
+    <DebugType>embedded</DebugType>
     <Nullable>enable</Nullable>
     <StartupObject>MainProgram</StartupObject>
   </PropertyGroup>
