--- a/SIPENGUBER.csproj
+++ b/SIPENGUBER.csproj
@@ -7,6 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <DebugType>embedded</DebugType>
     <Nullable>enable</Nullable>
+    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
     <StartupObject>MainProgram</StartupObject>
   </PropertyGroup>
 
